--- a/pom.xml
+++ b/pom.xml
@@ -3,6 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <packaging>jar</packaging>
+    <name>spring-boot</name>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -12,7 +14,7 @@
     </parent>
 
     <groupId>org.thegoosegame</groupId>
-    <artifactId>thegoosegame</artifactId>
+    <artifactId>the-goose-game</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -78,7 +80,27 @@
             <version>2.0.0-rc2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>8.0.0.Final</version>
+        </dependency>
 
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>jakarta.el</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator-cdi</artifactId>
+            <version>8.0.0.Final</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
 
     </dependencies>
 
