--- a/pom.xml
+++ b/pom.xml
@@ -101,8 +101,13 @@
             <scope>org.thegoosegame.game</scope>
         </dependency>
 
-
-
+        <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.1.214</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
