--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,13 @@
             <version>1.12.20</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20220924</version>
+        </dependency>
+
     </dependencies>
 
     <build>
